--- a/package.json
+++ b/package.json
@@ -7,14 +7,16 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
-    "eslint": "^8.57.0",
+    "@biomejs/biome": "1.9.4",
     "prettier": "^3.2.5",
     "turbo": "^2.5.0"
   },
   "name": "with-vite",
   "packageManager": "bun@1.0.27",
-  "workspaces": [
-    "apps/*",
-    "packages/*"
-  ]
+  "workspaces": ["apps/*", "packages/*"],
+  "dependencies": {
+    "@monaco-editor/react": "^4.7.0",
+    "@tailwindcss/cli": "^4.1.3",
+    "tailwindcss": "^4.1.3"
+  }
 }
