--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -2,18 +2,29 @@
   "name": "@repo/ui",
   "version": "0.0.0",
   "exports": {
-    "./counter": "./components/counter.ts",
-    "./header": "./components/header.ts",
-    "./setup-counter": "./utils/counter.ts"
+    ".": "./dist/index.mjs",
+    "./tailwind.config": "./tailwind.config.ts",
+    "./ui.css": "./src/main.css"
   },
   "license": "MIT",
   "scripts": {
-    "lint": "eslint \"**/*.ts\""
+    "dev": "tsup --watch",
+    "build": "tsup",
+    "lint:format": "pnpm biome format --write .",
+    "lint:fix": "pnpm biome check --apply .",
+    "lint:check": "pnpm biome check ."
+  },
+  "peerDependencies": {
+    "react": "^16.8 || ^17.0 || ^18.0 || ^19.0",
+    "react-dom": "^16.8 || ^17.0 || ^18.0 || ^19.0"
   },
   "devDependencies": {
-    "@repo/eslint-config": "*",
-    "@repo/typescript-config": "*",
-    "eslint": "^8.57.0",
+    "@repo/tailwind-config": "workspace:*",
+    "@repo/typescript-config": "workspace:*",
+    "daisyui": "latest",
     "typescript": "5.5.4"
+  },
+  "dependencies": {
+    "tsup": "^8.4.0"
   }
 }
