--- a/package.json
+++ b/package.json
@@ -1,15 +1,26 @@
 {
   "private": true,
+  "prisma": {
+    "schema": "packages/database/prisma/schema.prisma",
+    "seed": "tsx packages/database/src/seed.ts"
+  },
   "scripts": {
     "build": "turbo run build",
     "dev": "turbo run dev",
     "lint": "turbo run lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "db:migrate:deploy": "turbo run db:migrate:deploy",
+    "db:migrate:dev": "turbo run db:migrate:dev",
+    "db:push": "turbo run db:push",
+    "db:seed": "turbo run db:seed",
+    "generate": "turbo run generate"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "prettier": "^3.2.5",
-    "turbo": "^2.5.0"
+    "turbo": "^2.5.0",
+    "prisma": "6.5.0",
+    "zod": "^3.23.8"
   },
   "name": "with-vite",
   "packageManager": "bun@1.0.27",
@@ -17,6 +28,7 @@
   "dependencies": {
     "@monaco-editor/react": "^4.7.0",
     "@tailwindcss/cli": "^4.1.3",
+    "dotenv": "^16.4.7",
     "tailwindcss": "^4.1.3"
   }
 }
