--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -21,12 +21,20 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@repo/schemas": "workspace:*",
+    "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^11.0.13",
+    "@nestjs/websockets": "^11.0.13",
+    "@repo/schemas": "workspace:*",
+    "@socket.io/redis-adapter": "^8.3.0",
+    "cache-manager": "^6.4.2",
+    "cache-manager-redis-store": "^3.0.1",
+    "redis": "^4.7.0",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "@repo/database": "workspace:*",
