--- a/package.json
+++ b/package.json
@@ -22,13 +22,12 @@
     "prisma": "6.5.0",
     "zod": "^3.23.8"
   },
-  "name": "with-vite",
+  "name": "chadllenger",
   "packageManager": "bun@1.0.27",
   "workspaces": ["apps/*", "packages/*"],
   "dependencies": {
     "@monaco-editor/react": "^4.7.0",
     "@tailwindcss/cli": "^4.1.3",
-    "dotenv": "^16.4.7",
     "tailwindcss": "^4.1.3"
   }
 }
