--- a/packages/schemas/package.json
+++ b/packages/schemas/package.json
@@ -7,7 +7,7 @@
     ".": "./dist/index.js"
   },
   "scripts": {
-    "dev": "tsc --watch",
+    "dev": "tsup src/* --watch",
     "build": "tsc",
     "lint:format": "pnpm biome format --write .",
     "lint:fix": "pnpm biome check --apply .",
@@ -16,5 +16,8 @@
   "dependencies": {
     "typescript": "^5.7.2",
     "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "@repo/typescript-config": "workspace:*"
   }
 }
