--- a/packages/tailwind-config/package.json
+++ b/packages/tailwind-config/package.json
@@ -6,7 +6,7 @@
     ".": "./tailwind.config.ts"
   },
   "devDependencies": {
-    "@repo/typescript-config": "*",
+    "@repo/typescript-config": "workspace:*",
     "tailwindcss": "^4.1.2"
   }
 }
