--- a/apps/game/package.json
+++ b/apps/game/package.json
@@ -9,13 +9,17 @@
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
     "@react-router/node": "^7.5.0",
     "@react-router/serve": "^7.5.0",
+    "@repo/schemas": "workspace:*",
     "isbot": "^5.1.17",
     "lucide-react": "^0.487.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router": "^7.5.0"
+    "react-hook-form": "^7.55.0",
+    "react-router": "^7.5.0",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@react-router/dev": "^7.5.0",
