--- a/apps/game/package.json
+++ b/apps/game/package.json
@@ -15,11 +15,13 @@
     "@repo/schemas": "workspace:*",
     "isbot": "^5.1.17",
     "lucide-react": "^0.487.0",
+    "motion": "^12.7.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
     "react-router": "^7.5.0",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
     "@react-router/dev": "^7.5.0",
