--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@keyv/redis": "^4.3.3",
+    "@nestjs/bullmq": "^11.0.2",
     "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
@@ -30,6 +31,7 @@
     "@nestjs/websockets": "^11.0.13",
     "@repo/schemas": "workspace:*",
     "@socket.io/redis-adapter": "^8.3.0",
+    "bullmq": "^5.49.2",
     "cache-manager": "^6.4.2",
     "cache-manager-redis-store": "^3.0.1",
     "redis": "^4.7.0",
