--- a/apps/game/package.json
+++ b/apps/game/package.json
@@ -21,6 +21,7 @@
     "react-hook-form": "^7.55.0",
     "react-router": "^7.5.0",
     "socket.io-client": "^4.8.1",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
