--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@monaco-editor/react": "^4.7.0",
     "@tailwindcss/cli": "^4.1.3",
+    "dotenv": "^16.5.0",
     "tailwindcss": "^4.1.3"
   }
 }
