--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -21,6 +21,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.3.22",
     "@keyv/redis": "^4.3.3",
     "@nestjs/bullmq": "^11.0.2",
     "@nestjs/cache-manager": "^3.0.1",
@@ -33,9 +34,11 @@
     "@nestjs/websockets": "^11.0.13",
     "@repo/schemas": "workspace:*",
     "@socket.io/redis-adapter": "^8.3.0",
+    "ai": "^4.3.15",
     "bullmq": "^5.49.2",
     "cache-manager": "^6.4.2",
     "cache-manager-redis-store": "^3.0.1",
+    "openai": "^4.98.0",
     "redis": "^4.7.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
