--- a/apps/game/package.json
+++ b/apps/game/package.json
@@ -10,23 +10,28 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
+    "@radix-ui/react-slot": "^1.2.2",
     "@react-router/node": "^7.5.0",
     "@react-router/serve": "^7.5.0",
     "@repo/schemas": "workspace:*",
+    "canvas-confetti": "^1.9.3",
+    "class-variance-authority": "^0.7.1",
     "isbot": "^5.1.17",
     "lucide-react": "^0.487.0",
-    "motion": "^12.7.4",
+    "motion": "^12.10.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
     "react-router": "^7.5.0",
     "socket.io-client": "^4.8.1",
     "sonner": "^2.0.3",
-    "tailwind-merge": "^3.2.0"
+    "tailwind-merge": "^3.2.0",
+    "tailwind-variants": "^1.0.0"
   },
   "devDependencies": {
     "@react-router/dev": "^7.5.0",
     "@tailwindcss/vite": "^4.0.0",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^20",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
