--- a/apps/game/package.json
+++ b/apps/game/package.json
@@ -27,7 +27,8 @@
     "socket.io-client": "^4.8.1",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
-    "tailwind-variants": "^1.0.0"
+    "tailwind-variants": "^1.0.0",
+    "ts-pattern": "^5.7.1"
   },
   "devDependencies": {
     "@react-router/dev": "^7.5.0",
